Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-94589

Crash if model-blend particle is not properly initialized

XMLWordPrintable

    • a31c704c07ff848995cbc2049858288681e0ed11 (qt/qtquick3d/dev) 0755e2382b4b3f8f6b9ba0799b7b7c63f1727d41 (qt/qtquick3d/6.2)

      There is a crash if the delegate is not set or the model fails to load.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            anmaatta Antti Määttä
            anmaatta Antti Määttä
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes