Fix crash when model-blend particle is not properly initialized

Fixes: QTBUG-94589
Change-Id: Ic6a869ce8eae6a86e5ac7dd3d439df1c24aa4805
Reviewed-by: Antti Määttä <antti.maatta@qt.io>
(cherry picked from commit a31c704c07ff848995cbc2049858288681e0ed11)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>